# PreciousRust101

InClassWork/barest/.cargo/: config
InClassWork/os_with_bootloader/: Cargo.toml
InClassWork/os_with_bootloader/kernel_with_bootloader/src/: main.rs  writer.rs
class_work/: Cargo.toml
class_work/src/: main.rs
class_work/src/how_you_hold_data_for_operations/: derived.rs  primitives.rs
class_work/src/how_you_hold_data_for_operations/derived/: user_defined.rs
class_work/src/how_you_hold_data_for_operations/primitives/: compound.rs  scalar.rs
hello_world/src/: greetings.rs  main.rs
hello_world/src/greetings/: french.rs  spanish.rs
hello_world/src/hello_world_lib/: Cargo.toml
