[package]
name = "hello_world_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_world_lib = {path = "hello_world_lib"}
//I created a lib.rs file and to access the code written in the lib.rs file it has to be declared in here as in above as a dependency(FIND OUT WHAT A DEPENDENCY IS)

//Continue from slide 19